# Goosebumps_edge

./: LICENSE  README.md  config.yaml  config_example.yaml
collector/: pyproject.toml  requirements.txt
collector/app/: device_udp.py  main.py  metrics.py  pilot_fft.py  state.py  storage.py
collector/app/ui/: index.html
docs/: analysis_and_edge_methods.md  dataset_schema.md  goosebumps_spec_v0_3.md  implementation_spec.md  open_source_release_guide.md  procedure_manual.md  test_plan.md
docs/en/: analysis_and_edge_methods.md  dataset_schema.md  goosebumps_spec_v0_3.md  implementation_spec.md  open_source_release_guide.md  procedure_manual.md  test_plan.md
examples/sample_session/: README.md
firmware/atoms3r_cam_realtime_infer/: README.md  platformio.ini
firmware/atoms3r_cam_realtime_infer/include/: board_atoms3r_cam_pins.h  model_lbp_lr.h  user_config.h
firmware/atoms3r_cam_realtime_infer/src/: main.cpp
firmware/atoms3r_m12_streamer/: README.md  platformio.ini
firmware/atoms3r_m12_streamer/include/: board_atoms3r_m12_pins.h  user_config.h
firmware/atoms3r_m12_streamer/src/: main.cpp
goosebumps_hub/: README.en.md  README.md
goosebumps_hub/hub/templates/: index.html
hardware/: arm_holder v2.step
tools/: derive_features.py  export_lbp_lr_header.py  infer_lbp_lr.py  make_labels.py  roi_utils.py  simulate_device.py  train_lbp_lr.py  validate_session.py
