[project]
name = "goosebumps-collector"
version = "0.1.0"
description = "Collector PC for wearable goosebumps detection (FastAPI UI + dataset logging + pilot FFT gate)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "python-multipart>=0.0.9",
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "numpy>=1.24",
  "pillow>=10.0",
  "matplotlib>=3.8",
  "requests>=2.31",
]
